bin_PROGRAMS = index
index_SOURCES = content.cpp	\
	content.h				\
	global.cpp				\
	global.h				\
	inverter.cpp			\
	inverter.h				\
	lex.cpp					\
	lex.h					\
	main.cpp				\
	sort.cpp				\
	sort.h

EXTRA_DIST = win32 			\
	Configure-win32.pl 		\
	Makefile.win32			\
	clean-win32.bat			\
	make-win32.bat
