bin_PROGRAMS = index
index_SOURCES = content.cpp	\
	content.h				\
	files.cpp				\
	files.h					\
	global.cpp				\
	global.h				\
	index.cpp				\
	index.h					\
	inverter.cpp			\
	inverter.h				\
	lex.cpp					\
	lex.h					\
	main.cpp				\
	sort.cpp				\
	sort.h

index_CPPFLAGS = -Wall 
CXXFLAGS = -O3

EXTRA_DIST = win32 			\
	Configure-win32.pl 		\
	Makefile.win32			\
	clean-win32.bat			\
	make-win32.bat

