bin_PROGRAMS = index
index_SOURCES = blockio.c	\
	blockio.h				\
	btree.c					\
	btree.h					\
	concord.c				\
	concord.h				\
	global.c				\
	global.h				\
	index.c					\
	index.h					\
	inverter.c				\
	inverter.h				\
	lex.c					\
	lex.h					\
	main.c					\
	sort.c					\
	sort.h

EXTRA_DIST = win32 			\
	Configure-win32.pl 		\
	Makefile.win32			\
	clean-win32.bat			\
	make-win32.bat



